🩹 fix hero title animation on mobile

--- a/style/home.css
+++ b/style/home.css
@@ -303,7 +303,6 @@ section.accreditations {
 
     .hero-title {
         font-size: 34px;
-        line-height: 50px;
     }
 }
 
